--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TodoList</string>
+    <string name="book_title">Book Title</string>
+    <string name="book_author">Book Author</string>
+    <string name="book_pages">Number of pages</string>
+    <string name="book_link">Book Link</string>
+    <string name="book_isbn">Book Isbn</string>
 </resources>
